// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrentlyPlaying snapshots > renders default state 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="w-full max-w-[400px] aspect-square"
    >
      <img
        alt="Cover Art"
        class="w-full h-full object-cover"
        src="/cover.jpg"
      />
    </div>
    <div
      class="space-y-1 mt-6 font-inter font-bold text-2xl leading-none tracking-normal"
    >
      <div
        class="font-inter font-bold text-2xl leading-none tracking-normal text-softBlack dark:text-warmWhite"
      >
        Test Song
      </div>
      <div
        class="text-sm opacity-70 font-inter text-softBlack dark:text-warmWhite"
      >
        Test Artist
      </div>
    </div>
    <div
      class="flex justify-between gap-4 mt-4 w-full max-w-[400px]"
    >
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 4h2v16H4zM18 4l-8.5 8L18 20V4z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 19L2 12L11 5V19Z"
          />
          <path
            d="M22 19L13 12L22 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-10 h-10 text-black dark:!text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 48 48"
        >
          <rect
            fill="none"
            height="46"
            rx="5"
            stroke="currentColor"
            stroke-width="2"
            width="46"
            x="1"
            y="1"
          />
          <path
            d="M18 15L32 24L18 33V15Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 19L21 12L12 5V19Z"
          />
          <path
            d="M1 19L10 12L1 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition "
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 14L22 18L18 22"
          />
          <path
            d="M18 2L22 6L18 10"
          />
          <path
            d="M2 18H3.973C4.619 18.004 5.257 17.852 5.832 17.556C6.407 17.26 6.901 16.829 7.273 16.3L12.727 7.7C13.099 7.171 13.593 6.74 14.168 6.444C14.743 6.148 15.38 5.996 16.027 6H22"
          />
          <path
            d="M2 6H3.972C4.717 5.995 5.45 6.198 6.086 6.587C6.722 6.975 7.237 7.534 7.572 8.2"
          />
          <path
            d="M22 18H15.959C15.304 17.993 14.66 17.826 14.084 17.512C13.509 17.198 13.02 16.747 12.659 16.2L12.3 15.75"
          />
        </svg>
      </button>
    </div>
    <div
      class="mt-4 w-full max-w-[400px]"
    >
      <div
        class="flex items-center gap-3"
      >
        <svg
          class="w-6 h-6 text-softBlack dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10v4h4l5 5V5L7 10H3zm13.5 2c0-1.77-.77-3.29-2-4.3v8.59c1.23-1.01 2-2.53 2-4.29zM14 3.23v2.06c3.39 1.05 6 4.15 6 7.71s-2.61 6.66-6 7.71v2.06c4.45-1.17 8-5.28 8-9.77s-3.55-8.6-8-9.77z"
          />
        </svg>
        <input
          aria-label="Volume control"
          class="w-full"
          max="100"
          min="0"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrentlyPlaying snapshots > renders when playing 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="w-full max-w-[400px] aspect-square"
    >
      <img
        alt="Cover Art"
        class="w-full h-full object-cover"
        src="/cover.jpg"
      />
    </div>
    <div
      class="space-y-1 mt-6 font-inter font-bold text-2xl leading-none tracking-normal"
    >
      <div
        class="font-inter font-bold text-2xl leading-none tracking-normal text-softBlack dark:text-warmWhite"
      >
        Test Song
      </div>
      <div
        class="text-sm opacity-70 font-inter text-softBlack dark:text-warmWhite"
      >
        Test Artist
      </div>
    </div>
    <div
      class="flex justify-between gap-4 mt-4 w-full max-w-[400px]"
    >
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 4h2v16H4zM18 4l-8.5 8L18 20V4z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 19L2 12L11 5V19Z"
          />
          <path
            d="M22 19L13 12L22 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-10 h-10 text-black dark:!text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 48 48"
        >
          <rect
            fill="none"
            height="46"
            rx="5"
            stroke="currentColor"
            stroke-width="2"
            width="46"
            x="1"
            y="1"
          />
          <rect
            fill="currentColor"
            height="18"
            width="4"
            x="16"
            y="15"
          />
          <rect
            fill="currentColor"
            height="18"
            width="4"
            x="28"
            y="15"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 19L21 12L12 5V19Z"
          />
          <path
            d="M1 19L10 12L1 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition "
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 14L22 18L18 22"
          />
          <path
            d="M18 2L22 6L18 10"
          />
          <path
            d="M2 18H3.973C4.619 18.004 5.257 17.852 5.832 17.556C6.407 17.26 6.901 16.829 7.273 16.3L12.727 7.7C13.099 7.171 13.593 6.74 14.168 6.444C14.743 6.148 15.38 5.996 16.027 6H22"
          />
          <path
            d="M2 6H3.972C4.717 5.995 5.45 6.198 6.086 6.587C6.722 6.975 7.237 7.534 7.572 8.2"
          />
          <path
            d="M22 18H15.959C15.304 17.993 14.66 17.826 14.084 17.512C13.509 17.198 13.02 16.747 12.659 16.2L12.3 15.75"
          />
        </svg>
      </button>
    </div>
    <div
      class="mt-4 w-full max-w-[400px]"
    >
      <div
        class="flex items-center gap-3"
      >
        <svg
          class="w-6 h-6 text-softBlack dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10v4h4l5 5V5L7 10H3zm13.5 2c0-1.77-.77-3.29-2-4.3v8.59c1.23-1.01 2-2.53 2-4.29zM14 3.23v2.06c3.39 1.05 6 4.15 6 7.71s-2.61 6.66-6 7.71v2.06c4.45-1.17 8-5.28 8-9.77s-3.55-8.6-8-9.77z"
          />
        </svg>
        <input
          aria-label="Volume control"
          class="w-full"
          max="100"
          min="0"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrentlyPlaying snapshots > renders while loading 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="w-full max-w-[400px] aspect-square"
    >
      <img
        alt="Cover Art"
        class="w-full h-full object-cover"
        src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='1200'%20height='1200'%20fill='none'%3e%3crect%20width='1200'%20height='1200'%20fill='%23EAEAEA'%20rx='3'/%3e%3cg%20opacity='.5'%3e%3cg%20opacity='.5'%3e%3cpath%20fill='%23FAFAFA'%20d='M600.709%20736.5c-75.454%200-136.621-61.167-136.621-136.62%200-75.454%2061.167-136.621%20136.621-136.621%2075.453%200%20136.62%2061.167%20136.62%20136.621%200%2075.453-61.167%20136.62-136.62%20136.62Z'/%3e%3cpath%20stroke='%23C9C9C9'%20stroke-width='2.418'%20d='M600.709%20736.5c-75.454%200-136.621-61.167-136.621-136.62%200-75.454%2061.167-136.621%20136.621-136.621%2075.453%200%20136.62%2061.167%20136.62%20136.621%200%2075.453-61.167%20136.62-136.62%20136.62Z'/%3e%3c/g%3e%3cpath%20stroke='url(%23a)'%20stroke-width='2.418'%20d='M0-1.209h553.581'%20transform='scale(1%20-1)%20rotate(45%201163.11%2091.165)'/%3e%3cpath%20stroke='url(%23b)'%20stroke-width='2.418'%20d='M404.846%20598.671h391.726'/%3e%3cpath%20stroke='url(%23c)'%20stroke-width='2.418'%20d='M599.5%20795.742V404.017'/%3e%3cpath%20stroke='url(%23d)'%20stroke-width='2.418'%20d='m795.717%20796.597-391.441-391.44'/%3e%3cpath%20fill='%23fff'%20d='M600.709%20656.704c-31.384%200-56.825-25.441-56.825-56.824%200-31.384%2025.441-56.825%2056.825-56.825%2031.383%200%2056.824%2025.441%2056.824%2056.825%200%2031.383-25.441%2056.824-56.824%2056.824Z'/%3e%3cg%20clip-path='url(%23e)'%3e%3cpath%20fill='%23666'%20fill-rule='evenodd'%20d='M616.426%20586.58h-31.434v16.176l3.553-3.554.531-.531h9.068l.074-.074%208.463-8.463h2.565l7.18%207.181V586.58Zm-15.715%2014.654%203.698%203.699%201.283%201.282-2.565%202.565-1.282-1.283-5.2-5.199h-6.066l-5.514%205.514-.073.073v2.876a2.418%202.418%200%200%200%202.418%202.418h26.598a2.418%202.418%200%200%200%202.418-2.418v-8.317l-8.463-8.463-7.181%207.181-.071.072Zm-19.347%205.442v4.085a6.045%206.045%200%200%200%206.046%206.045h26.598a6.044%206.044%200%200%200%206.045-6.045v-7.108l1.356-1.355-1.282-1.283-.074-.073v-17.989h-38.689v23.43l-.146.146.146.147Z'%20clip-rule='evenodd'/%3e%3c/g%3e%3cpath%20stroke='%23C9C9C9'%20stroke-width='2.418'%20d='M600.709%20656.704c-31.384%200-56.825-25.441-56.825-56.824%200-31.384%2025.441-56.825%2056.825-56.825%2031.383%200%2056.824%2025.441%2056.824%2056.825%200%2031.383-25.441%2056.824-56.824%2056.824Z'/%3e%3c/g%3e%3cdefs%3e%3clinearGradient%20id='a'%20x1='554.061'%20x2='-.48'%20y1='.083'%20y2='.087'%20gradientUnits='userSpaceOnUse'%3e%3cstop%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3cstop%20offset='.208'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='.792'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='1'%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3c/linearGradient%3e%3clinearGradient%20id='b'%20x1='796.912'%20x2='404.507'%20y1='599.963'%20y2='599.965'%20gradientUnits='userSpaceOnUse'%3e%3cstop%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3cstop%20offset='.208'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='.792'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='1'%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3c/linearGradient%3e%3clinearGradient%20id='c'%20x1='600.792'%20x2='600.794'%20y1='403.677'%20y2='796.082'%20gradientUnits='userSpaceOnUse'%3e%3cstop%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3cstop%20offset='.208'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='.792'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='1'%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3c/linearGradient%3e%3clinearGradient%20id='d'%20x1='404.85'%20x2='796.972'%20y1='403.903'%20y2='796.02'%20gradientUnits='userSpaceOnUse'%3e%3cstop%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3cstop%20offset='.208'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='.792'%20stop-color='%23C9C9C9'/%3e%3cstop%20offset='1'%20stop-color='%23C9C9C9'%20stop-opacity='0'/%3e%3c/linearGradient%3e%3cclipPath%20id='e'%3e%3cpath%20fill='%23fff'%20d='M581.364%20580.535h38.689v38.689h-38.689z'/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e"
      />
    </div>
    <div
      class="space-y-1 mt-6 font-inter font-bold text-2xl leading-none tracking-normal"
    >
      <div
        class="font-inter font-bold text-2xl leading-none tracking-normal text-softBlack dark:text-warmWhite"
      >
        No song selected
      </div>
      <div
        class="text-sm opacity-70 font-inter text-softBlack dark:text-warmWhite"
      >
        Unknown Artist
      </div>
    </div>
    <div
      class="flex justify-between gap-4 mt-4 w-full max-w-[400px]"
    >
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 4h2v16H4zM18 4l-8.5 8L18 20V4z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 19L2 12L11 5V19Z"
          />
          <path
            d="M22 19L13 12L22 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-10 h-10 text-black dark:!text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 48 48"
        >
          <rect
            fill="none"
            height="46"
            rx="5"
            stroke="currentColor"
            stroke-width="2"
            width="46"
            x="1"
            y="1"
          />
          <path
            d="M18 15L32 24L18 33V15Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 19L21 12L12 5V19Z"
          />
          <path
            d="M1 19L10 12L1 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition "
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 14L22 18L18 22"
          />
          <path
            d="M18 2L22 6L18 10"
          />
          <path
            d="M2 18H3.973C4.619 18.004 5.257 17.852 5.832 17.556C6.407 17.26 6.901 16.829 7.273 16.3L12.727 7.7C13.099 7.171 13.593 6.74 14.168 6.444C14.743 6.148 15.38 5.996 16.027 6H22"
          />
          <path
            d="M2 6H3.972C4.717 5.995 5.45 6.198 6.086 6.587C6.722 6.975 7.237 7.534 7.572 8.2"
          />
          <path
            d="M22 18H15.959C15.304 17.993 14.66 17.826 14.084 17.512C13.509 17.198 13.02 16.747 12.659 16.2L12.3 15.75"
          />
        </svg>
      </button>
    </div>
    <div
      class="mt-4 w-full max-w-[400px]"
    >
      <div
        class="flex items-center gap-3"
      >
        <svg
          class="w-6 h-6 text-softBlack dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10v4h4l5 5V5L7 10H3zm13.5 2c0-1.77-.77-3.29-2-4.3v8.59c1.23-1.01 2-2.53 2-4.29zM14 3.23v2.06c3.39 1.05 6 4.15 6 7.71s-2.61 6.66-6 7.71v2.06c4.45-1.17 8-5.28 8-9.77s-3.55-8.6-8-9.77z"
          />
        </svg>
        <input
          aria-label="Volume control"
          class="w-full"
          max="100"
          min="0"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrentlyPlaying snapshots > renders with different playback speed 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="w-full max-w-[400px] aspect-square"
    >
      <img
        alt="Cover Art"
        class="w-full h-full object-cover"
        src="/cover.jpg"
      />
    </div>
    <div
      class="space-y-1 mt-6 font-inter font-bold text-2xl leading-none tracking-normal"
    >
      <div
        class="font-inter font-bold text-2xl leading-none tracking-normal text-softBlack dark:text-warmWhite"
      >
        Test Song
      </div>
      <div
        class="text-sm opacity-70 font-inter text-softBlack dark:text-warmWhite"
      >
        Test Artist
      </div>
    </div>
    <div
      class="flex justify-between gap-4 mt-4 w-full max-w-[400px]"
    >
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 4h2v16H4zM18 4l-8.5 8L18 20V4z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 19L2 12L11 5V19Z"
          />
          <path
            d="M22 19L13 12L22 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-10 h-10 text-black dark:!text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 48 48"
        >
          <rect
            fill="none"
            height="46"
            rx="5"
            stroke="currentColor"
            stroke-width="2"
            width="46"
            x="1"
            y="1"
          />
          <path
            d="M18 15L32 24L18 33V15Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 19L21 12L12 5V19Z"
          />
          <path
            d="M1 19L10 12L1 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition "
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 14L22 18L18 22"
          />
          <path
            d="M18 2L22 6L18 10"
          />
          <path
            d="M2 18H3.973C4.619 18.004 5.257 17.852 5.832 17.556C6.407 17.26 6.901 16.829 7.273 16.3L12.727 7.7C13.099 7.171 13.593 6.74 14.168 6.444C14.743 6.148 15.38 5.996 16.027 6H22"
          />
          <path
            d="M2 6H3.972C4.717 5.995 5.45 6.198 6.086 6.587C6.722 6.975 7.237 7.534 7.572 8.2"
          />
          <path
            d="M22 18H15.959C15.304 17.993 14.66 17.826 14.084 17.512C13.509 17.198 13.02 16.747 12.659 16.2L12.3 15.75"
          />
        </svg>
      </button>
    </div>
    <div
      class="mt-4 w-full max-w-[400px]"
    >
      <div
        class="flex items-center gap-3"
      >
        <svg
          class="w-6 h-6 text-softBlack dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10v4h4l5 5V5L7 10H3zm13.5 2c0-1.77-.77-3.29-2-4.3v8.59c1.23-1.01 2-2.53 2-4.29zM14 3.23v2.06c3.39 1.05 6 4.15 6 7.71s-2.61 6.66-6 7.71v2.06c4.45-1.17 8-5.28 8-9.77s-3.55-8.6-8-9.77z"
          />
        </svg>
        <input
          aria-label="Volume control"
          class="w-full"
          max="100"
          min="0"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrentlyPlaying snapshots > renders with shuffle enabled 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <div
      class="w-full max-w-[400px] aspect-square"
    >
      <img
        alt="Cover Art"
        class="w-full h-full object-cover"
        src="/cover.jpg"
      />
    </div>
    <div
      class="space-y-1 mt-6 font-inter font-bold text-2xl leading-none tracking-normal"
    >
      <div
        class="font-inter font-bold text-2xl leading-none tracking-normal text-softBlack dark:text-warmWhite"
      >
        Test Song
      </div>
      <div
        class="text-sm opacity-70 font-inter text-softBlack dark:text-warmWhite"
      >
        Test Artist
      </div>
    </div>
    <div
      class="flex justify-between gap-4 mt-4 w-full max-w-[400px]"
    >
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 4h2v16H4zM18 4l-8.5 8L18 20V4z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 19L2 12L11 5V19Z"
          />
          <path
            d="M22 19L13 12L22 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-10 h-10 text-black dark:!text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 48 48"
        >
          <rect
            fill="none"
            height="46"
            rx="5"
            stroke="currentColor"
            stroke-width="2"
            width="46"
            x="1"
            y="1"
          />
          <path
            d="M18 15L32 24L18 33V15Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 19L21 12L12 5V19Z"
          />
          <path
            d="M1 19L10 12L1 5V19Z"
          />
        </svg>
      </button>
      <button
        class="p-2"
      >
        <svg
          class="w-6 h-6 text-black dark:text-warmWhite hover:text-yellow-400 transition !text-yellow-400 dark:!text-yellow-400"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 14L22 18L18 22"
          />
          <path
            d="M18 2L22 6L18 10"
          />
          <path
            d="M2 18H3.973C4.619 18.004 5.257 17.852 5.832 17.556C6.407 17.26 6.901 16.829 7.273 16.3L12.727 7.7C13.099 7.171 13.593 6.74 14.168 6.444C14.743 6.148 15.38 5.996 16.027 6H22"
          />
          <path
            d="M2 6H3.972C4.717 5.995 5.45 6.198 6.086 6.587C6.722 6.975 7.237 7.534 7.572 8.2"
          />
          <path
            d="M22 18H15.959C15.304 17.993 14.66 17.826 14.084 17.512C13.509 17.198 13.02 16.747 12.659 16.2L12.3 15.75"
          />
        </svg>
      </button>
    </div>
    <div
      class="mt-4 w-full max-w-[400px]"
    >
      <div
        class="flex items-center gap-3"
      >
        <svg
          class="w-6 h-6 text-softBlack dark:text-warmWhite hover:text-yellow-400 transition"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10v4h4l5 5V5L7 10H3zm13.5 2c0-1.77-.77-3.29-2-4.3v8.59c1.23-1.01 2-2.53 2-4.29zM14 3.23v2.06c3.39 1.05 6 4.15 6 7.71s-2.61 6.66-6 7.71v2.06c4.45-1.17 8-5.28 8-9.77s-3.55-8.6-8-9.77z"
          />
        </svg>
        <input
          aria-label="Volume control"
          class="w-full"
          max="100"
          min="0"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
